# sentinela

./: .coveragerc  .dockerignore  .env.secrets  .gitignore  Dockerfile  FUNDING.yml  LICENSE.txt  Makefile  README.md  __main__.py  alembic.ini  configs-scalable.yaml  configs.yaml  docker-compose-dev.yaml  docker-compose-local.yaml  docker-compose-scalable.yaml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yaml  version_tag.yaml
alembic/versions/: 20241119903_c628330bb96e_create_notifications_table.py  247390255aee_create_code_modules_table.py  61f4515a5943_create_monitors_table.py  8382681faa0c_create_issues_table.py  a0e61ac09d4c_create_alerts_table.py
configs/: configs-scalable.yaml  configs.yaml
dashboard/: sentinela_dashboard.py  static_dashboard.html
docker/: Dockerfile  docker-compose-dev.yaml  docker-compose-local.yaml  docker-compose-scalable.yaml
docs/: command_line_interface.md  configuration.md  configuration_file.md  dropping_issues.md  example_monitors.md  how_to_run.md  http_server.md  monitor.md  monitor_lifecycle.md  monitor_registering.md  monitor_validating.md  monitoring_sentinela.md  overview.md  plugin_slack.md  plugins.md  querying.md  recommendations.md  sample_monitor.md  slack_commands.md  usage.md  when_to_use_sentinela.md
docs/diagrams/: diagrams.drawio
docs/plugins/: aws.md  odbc.md  plugins.md  postgres.md  slack.md
example_monitors/blocking_operations_monitor/: README.md  blocking_operations_monitor.py
example_monitors/non_solvable_issues_monitor/: README.md  non_solvable_issues_monitor.py
example_monitors/plugin_slack_notification_monitor/: README.md  plugin_slack_notification_monitor.py
example_monitors/query_monitor/: README.md  query_monitor.py
example_monitors/reactions_monitor/: README.md  reactions_monitor.py
example_monitors/variables_monitor/: README.md  variables_monitor.py
internal_monitors/active_notification_alert_solved/: active_notification_alert_solved.py  search_query.sql  update_query.sql
internal_monitors/monitor_consecutive_fails/: README.md  monitor_consecutive_fails.py  search_query.sql  update_query.sql
internal_monitors/monitor_failed_consecutive_executions/: monitor_failed_consecutive_executions.py  search_query.sql
internal_monitors/monitor_high_active_issues_count/: README.md  monitor_high_active_issues_count.py  search_query.sql
internal_monitors/monitor_long_time_queued/: monitor_long_time_queued.py  search_query.sql  update_query.sql
migrations/: env.py
migrations/versions/: 202411062232_61f4515a5943_create_monitors_table.py  202411062236_a0e61ac09d4c_create_alerts_table.py  202411062248_8382681faa0c_create_issues_table.py  202411062257_c628330bb96e_create_notifications_table.py  202411181208_247390255aee_create_code_modules_table.py  202505232108_ce56a57ff560_create_variables_table.py  202506291026_4823e4b63b3f_create_events_table.py  202510181836_845d74ade448_create_monitors_executions_table.py  202607111200_1a2b3c4d5e6f_create_events_table.py
monitor_utils/: __init__.py
resources/: monitor_template.py  slack_app_manifest.yaml
resources/kubernetes_template/: README.md  config_map.yaml  controller.yaml  executor.yaml  motoserver.yaml  postgres.yaml  secrets.yaml
sample_monitors/test_monitor/: test_monitor.py
src/: base_exception.py  main.py
src/commands/: __init__.py  exceptions.py  requests.py  validations.py
src/configs/: __init__.py  configs.py  configs_loader.py
src/data_types/: issue_data_types.py
src/databases/: __init__.py  databases.py  pool_select.py  postgresql_pools.py  protocols.py
src/exceptions/: __init__.py  base.py  controller.py  database.py  http_server.py  module_loader.py  monitors_loader.py  registry.py
src/external_requests/: __init__.py  requests.py
src/internal_database/: __init__.py  check_database.py  exceptions.py  internal_database.py
src/message_queue/: __init__.py  internal_queue.py  protocols.py  queue_select.py  sqs_queue.py
src/models/: __init__.py  alert.py  base.py  code_module.py  event.py  events.py  exceptions.py  issue.py  monitor.py  monitor_executions.py  notification.py  variable.py
src/module_loader/: __init__.py  checker.py  import_restrict.py  loader.py
src/monitor_utils/: __init__.py  read_file.py  variables.py
src/notifications/: __init__.py  base_notification.py  internal_monitor_notification.py
src/options/: __init__.py  options.py
src/plugins/: __init__.py  attribute_select.py  plugins_loader.py  pool_select.py  queue_select.py  services.py
src/queue/: __init__.py  internal_queue.py  sqs_queue.py
src/registry/: __init__.py  exceptions.py  registry.py
src/utils/: app.py  async_tools.py  environment_variables.py  exception_handling.py  log.py  stack.py  time.py
tests/: conftest.py  sample_monitor_code.py  test_utils.py  test_uvloop.py
tests/commands/: test_requests.py  test_validations.py
tests/configs/: test_configs.py
tests/databases/: test_databases.py  test_pool_select.py  test_postgresql_pools.py
tests/external_requests/: test_requests.py
tests/internal_database/: test_callbacks.py  test_check_database.py
tests/message_queue/: test_internal_queue.py  test_message_queue.py  test_queue_select.py  test_sqs_queue.py  utils.py
tests/models/: test_alert.py  test_base.py  test_code_module.py  test_issue.py  test_monitor.py  test_notification.py  test_variable.py
tests/module_loader/: test_checker.py  test_import_restrict.py  test_loader.py
tests/monitor_utils/: test_read_file.py  test_variables.py
tests/notifications/: test_base_notification.py  test_internal_monitor_notification.py
tests/plugins/: test_attribute_select.py  test_plugins_loader.py  test_pool_select.py  test_queue_select.py  test_services.py
tests/queue/: test_internal_queue.py  test_queue.py  test_sqs_queue.py
tests/registry/: test_registry.py
tests/utils/: test_app.py  test_async_tools.py  test_environment_variables.py  test_exception_handling.py  test_log.py  (+2 more)
tools/: get_plugins_list.py  health_check.py  install_dependencies.sh  install_tests_dependencies.sh  register_monitor.py
(+145 files in other folders)
